--- a/client/style.css
+++ b/client/style.css
@@ -25,7 +25,7 @@ body {
     line-height: 1.7;
 
     /* ZDE VLOŽTE OBRÁZEK NA POZADÍ */
-    background-image: url('img/pozadi.jpg'); /* Příklad: background-image: url('img/moje-pozadi.jpg'); */
+    background-image: url('img/kalen3.jpg'); /* Příklad: background-image: url('img/moje-pozadi.jpg'); */
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
